4.12.8 (unreleased)
-------------------

- Add child mentions to "concrete-inspect.py --entities" output.


4.12.7 (2017-01-29)
-------------------

- Add brief tutorial to README.rst.

- Switch to zest.releaser for releases.

- Add Python 3 support.


4.12.6 (2017-01-28)
-------------------

- Refactor build, simplifying with tox.

- Turn on public Appveyor and GitHub builds.

- Remove hard numpy/scipy dependency in concrete.util.tokenization,
  adding (slower) fallback implementations.

- Add concrete.services.results to top-level package import.

- Expand Windows test coverage to (most) integration tests.

- Update package-level imports and use them in README.rst (as before).

- Rename
  annotate-communication-example.py to create-tokentagging-example.py.

- Add Redis hash backed Communication container implementation.


4.12.5 (2017-01-26)
-------------------

- Add command-line Fetch client, server scripts.

- Add wrappers for all current Concrete (4.12) services.

- Add Communication container interface and implementations:
    - filesystem directory
    - Fetch service
    - file loaded into memory
    - zip file

- Increase flake8 max-line-length from 79 to 99.

- Add note about accelerated protocol C++ dependency to README.rst.

- Fix syntax error in CONTRIBUTING.rst.

- Add CHANGELOG, AUTHORS.


4.12.4 (2017-01-15)
-------------------

- Deprecate remaining scripts containing underscores (to be removed in
  the future):
    - concrete_inspect.py
    - concrete_diff.py
    - validate_communication.py
    - inspect_dependency_parses.py

- Add new scripts using hyphens instead of underscores, for easy typing:
    - concrete-inspect.py
    - concrete-diff.py
    - validate-communication.py
    - inspect-dependency-parses.py

- Fix import errors in new AnnotateCommunicationService scripts:
    - examples/annotate-communication-service.py
    - scripts/annotate-communication-client.py

- Add check for accelerated protocol.  This can be used directly as